# gl_engine

./: CMakeLists.txt  README.md  build.sh  build_win64.sh  clear_build.sh
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: gl.h
libraries/imgui/: CMakeLists.txt
src/: main.cpp
src/classes/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.h  Shader.cpp  Shader.h  Vertex.h
src/classes/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/shaders/: shader.frag  shader.vert
toolchains/: toolchain_linux.cmake  toolchain_win64.cmake
